      [Alex Solomatnikov, Lane Brooks, et al]

**    Major internal changes to support future complex data types.

***   Support tri0 and tri1, bug462.  [Alex Solomatnikov]

***   Support nmos and pmos, bug488.  [Alex Solomatnikov]

***   Add INITIALDLY warning on initial assignments, bug478.  [Alex Solomatnikov]

***   Add PINMISSING and PINNOCONNECT lint checks.

***   Fix generate operators not short circuiting, bug413.  [by Jeremy Bennett]

***   Fix parameters not supported in constant functions, bug474. [Alex Solomatnikov]

****  Fix duplicate warnings/errors, bug516.  [Alex Solomatnikov]

****  Fix signed extending biops with WIDTH warning off, bug511. [Junji Hashimoto]

****  Fix ITOD internal error on real conversions, bug491.  [Alex Solomatnikov]

****  Fix input and real loosing real data type, bug501.  [Alex Solomatnikov]

****  Fix imports causing symbol table error, bug490.  [Alex Solomatnikov]

****  Fix newlines in radix values, bug507. [Walter Lavino]

****  Fix loop error message to report line, bug513.  [Jeremy Bennett]


* Verilator 3.833 2012/04/15

***   Support += and -= in standard for loops, bug463. [Alex Solomatnikov]

***   Fix processing unused parametrized modules, bug469, bug470.  [Alex Solomatnikov]

****  Add SELRANGE as warning instead of error, bug477. [Alex Solomatnikov]

****  Add readme.pdf and internal.pdf and doxygen, bug483.  [by Jeremy Bennett]

****  Fix change detections on arrays, bug364.  [John Stevenson, Alex Solomatnikov]

****  Fix signed array warning, bug456. [Alex Solomatnikov]

****  Fix genvar and begin under generate, bug461.  [Alex Solomatnikov]

****  Fix real constant parameter functions, bug475.  [Alex Solomatnikov]

****  Fix and document --gdb option, bug454. [Jeremy Bennett]

****  Fix OpenSolaris compile error. [Sanjay Singh]


* Verilator 3.832 2012/03/07

***   Fix memory delayed assignments from multiple clock domains. [Andrew Ling]

***   Support arrayed SystemC I/O pins.  [Christophe Joly]
