@@ -250,6 +250,7 @@ descriptions in the next sections for more information.
     --cc                        Create C++ output
     --cdc                       Clock domain crossing analysis
     --compiler <compiler-name>  Tune for specified C++ compiler
+    --converge-limit <loops>    Tune convergence settle time
     --coverage                  Enable all coverage
     --coverage-line             Enable line coverage
     --coverage-toggle           Enable toggle coverage
@@ -426,6 +427,11 @@ sub-expressions to avoid error C1009, and breaking deep blocks into
 functions to avoid error C1061.
 
 =back
+
+=item --converge-limit <loops>
+
+Rarely needed.  Specifies the maximum number of runtime iterations before
+creating a model failed to converge error.  Defaults to 100.
 
 =item --coverage
 
